Fixed default height in url list in graph view, so it doesn't look cut off. Moved the border at the left hand side of graph so it doesn't overlab bars.

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -13,6 +13,7 @@
 #left-side-content
 {
   width: 250px;
+  border-right: solid thin gray;
 }
 
 #right-side-container
@@ -20,7 +21,7 @@
   position: absolute;
   height: 100%;
   top: 0px;
-  left: 250px;
+  left: 251px;
   right: 0px;
   overflow: hidden;
 }
